# actions-semver

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml  common.yml  renovate.yml
fetch-commit-version/: README.md  action.yml
generate-version/: README.md  action.yml
github_semver/: __init__.py  bumps.py  commit_version.py  github_auth_redirect_adapter.py  run_semver.py
promote-version/: README.md  action.yml
tests/: __init__.py  test_bumps.py  test_commit_version.py  test_github_auth_redirect_adapter.py  test_run_semver.py
